WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221839
[tvOS] Fix build failure in WKFormSelectPicker
https://bugs.webkit.org/show_bug.cgi?id=221839
Summary
[tvOS] Fix build failure in WKFormSelectPicker
Aditya Keerthi
Reported
2021-02-12 12:31:24 PST
...
Attachments
Patch
(3.21 KB, patch)
2021-02-12 12:37 PST
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-12 12:33:43 PST
<
rdar://problem/74287348
>
Aditya Keerthi
Comment 2
2021-02-12 12:37:57 PST
Created
attachment 420167
[details]
Patch
EWS
Comment 3
2021-02-12 13:27:03 PST
Committed
r272804
: <
https://commits.webkit.org/r272804
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420167
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug