[tvOS] Fix build failure in WKFormSelectPicker https://bugs.webkit.org/show_bug.cgi?id=221839 <rdar://problem/74287348>

Reviewed by Wenson Hsieh.

UITableViewStyleInsetGrouped is not available on tvOS. Rather than
have two separate codepaths, we can just use UITableViewStyleGrouped
with sectionContentInsetFollowsLayoutMargins set to YES.

* Platform/spi/ios/UIKitSPI.h:
* UIProcess/ios/forms/WKFormSelectPicker.mm:
(-[WKSelectPickerTableViewController initWithView:]):


Canonical link: https://commits.webkit.org/234040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272804 268f45cc-cd09-0410-ab3c-d52691b4dbfc